# contiguous-params

./: .gitignore  README.md  bench.py  pyproject.toml
contiguous_params/: __init__.py  params.py
tests/: test_contiguous_params.py  test_params.py
