[tool.poetry]
name = "contiguous-params"
version = "0.1.0"
description = ""
authors = ["SunDoge <384813529@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
torch = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
